# python-project-52

./: .coveragerc  .flake8  .gitignore  Makefile  README.md  build.sh  conftest.py  db.sqlite3  pyproject.toml  pytest.ini  pytest_early_blocker.py  pytest_plugin_blocker.py  pytest_wrapper.py  run_pytest.py  sitecustomize.py  usercustomize.py
.github/workflows/: sonar.yml
code/: __init__.py  conftest.py  pytest_early_blocker.py  pytest_entrypoint.py  pytest_plugin_blocker.py
config/: asgi.py  settings.py  wsgi.py
locale/ru/LC_MESSAGES/: django.po
task_manager/: settings.py  urls.py
task_manager/labels/: __init__.py  admin.py  forms.py  tests.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/statuses/: admin.py  forms.py  tests.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_name.py
task_manager/templates/: base.html  index.html
task_manager/templates/auth/: login.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/users/: __init__.py  forms.py  urls.py  views.py
web/: filters.py  models.py  tests.py  urls.py  views.py
web/migrations/: 0001_initial.py  0002_alter_status_name_task.py  0003_label_task_labels.py
web/templates/: base.html  index.html
(+20 files in other folders)
