[project]
name = "hexlet-code"
version = "0.1.0"
dependencies = [
    "django-extensions",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 86
exclude = [
    "venv",
    "__pycache__",
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
